2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : always use CreateNativeObject.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs : refactoring of Parameters class. Added IEnumerable
	to Parameters and gracefully handle elem == null instead of special
	casing parms == null all over the place. Parameter logic is now Count
	driven. [Fixes #71750]

2005-01-26  Dan Winship  <danw@novell.com>

	* generator/Property.cs (Generate): Remove a redundant WriteLine (that
	resulted in there being 2 blank lines before every property).

	* generator/Signal.cs (Generate): s/Write/WriteLine/ to fix a
	weirdly-formatted if statement in the generated code.

2005-01-25  John Luke  <john.luke@gmail.com>

	* sample/CustomNotebook.cs:
	* sample/CustomWidget.cs: use Widget.WidgetFlags prop to avoid
	obsolete warning

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gnome/About.custom : implement a subclassable ctor.
	* gnome/Gnome.metadata : hide About ctor, fix About.Construct parms.
	* gnome/Makefile.am : add the new custom.
	[Fixes #71271]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : hide all the Pixbuf.SaveTo methods.
	* gdk/Pixbuf.custom : implement the SaveTo methods.
	[Fixes #71430]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide all the SignalFunc using Toolbar methods.
	* gtk/Makefile.am : add the new custom.
	* gtk/Toolbar.custom : implement the SignalFunc methods. Deal with
	null for Widget params in *Element.
	[Fixes #71428]

2005-01-24  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* generator/MethodBody.cs : fix out LPUGen params.

2005-01-24  Mike Kestner  <mkestner@novell.com>

	* gda/Makefile.am : add new custom.
	* gda/XmlConnection.custom : add backcompat static ctor.
	* generator/ClassBase.cs : refactor lookup logic to here from Ctor
	and improve the collision resolution.
	* generator/Ctor.cs : refactor to use MethodBase.
	* generator/Makefile.am : add new file.