@@ -1,87 +1,0 @@
-<Type Name="IMPreeditStyle" FullName="Gtk.IMPreeditStyle">
-  <TypeSignature Language="C#" Value="public enum IMPreeditStyle" Maintainer="auto" />
-  <AssemblyInfo>
-    <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <AssemblyCulture>neutral</AssemblyCulture>
-    <Attributes />
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>Not used in Gtk#. Do not use.</summary>
-    <remarks />
-  </Docs>
-  <Base>
-    <BaseTypeName>System.Enum</BaseTypeName>
-  </Base>
-  <Interfaces>
-    <Interface>
-      <InterfaceName>System.IComparable</InterfaceName>
-    </Interface>
-    <Interface>
-      <InterfaceName>System.IConvertible</InterfaceName>
-    </Interface>
-    <Interface>
-      <InterfaceName>System.IFormattable</InterfaceName>
-    </Interface>
-  </Interfaces>
-  <Attributes />
-  <Members>
-    <Member MemberName="Nothing">
-      <MemberSignature Language="C#" Value="Nothing" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IMPreeditStyle</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks>
-        </remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="Callback">
-      <MemberSignature Language="C#" Value="Callback" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IMPreeditStyle</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks>
-        </remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="value__">
-      <MemberSignature Language="C#" Value="value__" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Internal field.</summary>
-        <remarks>Do not use.</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="None">
-      <MemberSignature Language="C#" Value="None" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IMPreeditStyle</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-  </Members>
-</Type>
