@@ -57,6 +57,8 @@
   <attr path="/api/namespace/class[@cname='GtkTree_']/method[@name='GetRowDragData']/*/*[@name='path']" name="pass_as">out</attr>
   <attr path="/api/namespace/class[@cname='GtkType_']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkDebugFlag']" name="hidden">1</attr>
+  <attr path="/api/namespace/enum[@cname='GtkIMPreeditStyle']" name="hidden">1</attr>
+  <attr path="/api/namespace/enum[@cname='GtkIMStatusStyle']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkObjectFlags']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkPathPriorityType']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkPathType']" name="hidden">1</attr>
@@ -454,6 +456,7 @@
   <attr path="/api/namespace/struct[@cname='GtkBindingSignal']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkBoxChild']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkFixedChild']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkIMContextInfo']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkItemFactoryItem']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkImageAnimationData']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkImageIconSetData']" name="hidden">1</attr>
