@@ -4,6 +4,10 @@
 
 2005-01-26  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Gtk.metadata : hide 3 IM related internal types. [Fixes #71021]
+
+2005-01-26  Mike Kestner  <mkestner@novell.com>
+
 	* generator/*.cs : refactoring of Parameters class. Added IEnumerable
 	to Parameters and gracefully handle elem == null instead of special
 	casing parms == null all over the place. Parameter logic is now Count
